fixed some spacing issues

--- a/nodetest2/public/stylesheets/style.css
+++ b/nodetest2/public/stylesheets/style.css
@@ -161,6 +161,7 @@ a {
 
 canvas {
   	float: left;
+  	position: absolute;
 }
 
 #welcome {
